.err
In file included from kernel/src/elf/elf.c:1:
./kernel/include/common.h:18: warning: "NULL" redefined
 #define NULL ((void *)0)
 
In file included from ./libs/newlib/include/sys/types.h:69,
                 from ./kernel/include/common.h:11,
                 from kernel/src/elf/elf.c:1:
/usr/lib/gcc/i686-linux-gnu/8/include/stddef.h:403: note: this is the location of the previous definition
 #define NULL __null
 
In file included from ./libs/newlib/include/string.h:12,
                 from kernel/src/elf/elf.c:3:
./libs/newlib/include/sys/cdefs.h:303:18: warning: ISO C++11 requires whitespace after the macro name
 #define _Noreturn[[noreturn]]
                  ^
In file included from kernel/src/elf/elf.c:1:
./kernel/include/common.h:13:17: error: redeclaration of C++ built-in type 'bool' [-fpermissive]
 typedef uint8_t bool;
                 ^~~~
In file included from ./libs/newlib/include/string.h:11,
                 from kernel/src/elf/elf.c:3:
./libs/newlib/include/sys/reent.h:640:11: warning: unnecessary parentheses in declaration of '_sig_func' [-Wparentheses]
   void (**(_sig_func))(int);
           ^
kernel/src/elf/elf.c: In function 'uint32_t loader()':
kernel/src/elf/elf.c:28:16: error: invalid conversion from 'void*' to 'Elf32_Ehdr*' [-fpermissive]
  elf = (void *)0x0;
                ^~~
kernel/src/elf/elf.c:33:19: warning: pointer of type 'void *' used in arithmetic [-Wpointer-arith]
  ph = (void *)elf + elf->e_phoff;
       ~~~~~~~~~~~~^~~~~~~~~~~~~~
kernel/src/elf/elf.c:33:19: error: invalid conversion from 'void*' to 'Elf32_Phdr*' [-fpermissive]
kernel/src/elf/elf.c:44:4: error: 'printf' was not declared in this scope
    printf("%x\n",ph->p_vaddr);
    ^~~~~~
kernel/src/elf/elf.c:44:4: note: 'printf' is defined in header '<cstdio>'; did you forget to '#include <cstdio>'?
kernel/src/elf/elf.c:6:1:
+#include <cstdio>
 
kernel/src/elf/elf.c:44:4:
    printf("%x\n",ph->p_vaddr);
    ^~~~~~
kernel/src/elf/elf.c:47:43: warning: pointer of type 'void *' used in arithmetic [-Wpointer-arith]
   memcpy((void *)ph->p_vaddr, (void *)elf + ph->p_offset, ph->p_filesz);
                               ~~~~~~~~~~~~^~~~~~~~~~~~~~
kernel/src/elf/elf.c:49:29: warning: pointer of type 'void *' used in arithmetic [-Wpointer-arith]
   memset((void *)ph->p_vaddr+ph->p_filesz, 0, ph->p_memsz-ph->p_filesz);
          ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
